[gd_scene load_steps=8 format=3 uid="uid://bc6332cefnqhn"]

[ext_resource type="Texture2D" uid="uid://kfw0tbckrd1r" path="res://UI/button-64x16-rectangle-off.png" id="1_ra1uo"]
[ext_resource type="Texture2D" uid="uid://byx0v6cpk3v6h" path="res://UI/ShopUI/area.png" id="2_ewnnd"]
[ext_resource type="Script" path="res://UI/ShopUI/upgrade_button.gd" id="2_nexer"]
[ext_resource type="Texture2D" uid="uid://did72sswvwecf" path="res://UI/ShopUI/crosshair.png" id="3_erj85"]
[ext_resource type="FontFile" uid="uid://c87p3pwsvcjfo" path="res://UI/Font/QuinqueFive.otf" id="3_s6uax"]
[ext_resource type="Texture2D" uid="uid://dx8isxv0hyfku" path="res://UI/ShopUI/speed.png" id="4_xwkbe"]

[sub_resource type="Theme" id="Theme_pvwff"]
default_font = ExtResource("3_s6uax")
default_font_size = 5

[node name="ShopButton" type="TextureRect"]
anchors_preset = -1
anchor_right = 0.222
anchor_bottom = 0.099
offset_right = -191.744
offset_bottom = -48.152
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
texture = ExtResource("1_ra1uo")
stretch_mode = 2
script = ExtResource("2_nexer")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 116.0
offset_bottom = 26.0
scale = Vector2(0.5, 0.5)
columns = 4

[node name="MarginContainer4" type="MarginContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WeaponIcon" type="TextureRect" parent="GridContainer/MarginContainer4"]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="AreaUpgradeButton" type="TextureButton" parent="GridContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_ewnnd")

[node name="AreaUpgradeLabel" type="Label" parent="GridContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = SubResource("Theme_pvwff")
text = "12"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="DamageUpgradeButton" type="TextureButton" parent="GridContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_erj85")

[node name="DamageUpgradeLabel" type="Label" parent="GridContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = SubResource("Theme_pvwff")
text = "12"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="SpeedUpgradeButton" type="TextureButton" parent="GridContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_xwkbe")

[node name="SpeedUpgradeLabel" type="Label" parent="GridContainer/MarginContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = SubResource("Theme_pvwff")
text = "12"
horizontal_alignment = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="button_up" from="GridContainer/MarginContainer2/VBoxContainer/AreaUpgradeButton" to="." method="_on_area_upgrade_button_button_up"]
[connection signal="button_up" from="GridContainer/MarginContainer/VBoxContainer/DamageUpgradeButton" to="." method="_on_damage_upgrade_button_button_up"]
[connection signal="button_up" from="GridContainer/MarginContainer3/VBoxContainer/SpeedUpgradeButton" to="." method="_on_speed_upgrade_button_button_up"]
